examples/test/testpolicy13198.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13198
  namespace: namespace47
spec:
  podSelector:
    matchLabels:
      key0: value13
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key43: value25
          key41: value15
          key28: value49
      podSelector:
        matchLabels:
          key10: value48
          key4: value32
          key40: value44
